--- a/Plastic_doc01.html
+++ b/Plastic_doc01.html
@@ -1,201 +1,264 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="assets/chhorng/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/d9ad53b8e3.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="stylesheet" href="assets/css/theme.css" />
-  <link rel="stylesheet" href="assets/chhorng/style.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-  <script src="https://kit.fontawesome.com/d9ad53b8e3.js" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+  <body>
+    <main>
+      <section class="py-5">
+        <div class="container bg-light p-4 rounded-3 shadow-sm">
+          <!-- Title -->
+          <h2 class="fw-bold mb-4 text-center text-success">
+            ពីសំរាមប្លាស្ទិក កែច្នៃក្លាយទៅជាសិល្បៈគំនូរ
+            និងរូបចម្លាក់ដ៏គួរឱ្យកោតសរសើរ
+          </h2>
 
-</head>
+          <div class="row g-4 align-items-start">
+            <!-- Content -->
+            <div class="col-lg-8">
+              <p class="lh-lg">
+                ប្លាស្ទិក
+                បន្ទាប់ពីប្រើប្រាស់រួចហើយនឹងក្លាយទៅជាសំណល់មួយប្រភេទដែលប៉ះពាល់យ៉ាងខ្លាំងដល់បរិស្ថាន
+                ព្រោះវាមិនងាយរលាយ កប់ក្នុងដីក៏ពិបាក បោះក្នុងទឹកក៏មិនកើត
+                ហើយបើដុតចោលក៏បង្កជាផ្សែងពុលប៉ះពាល់ដល់បរិយាកាស និងស្រទាប់អូហ្សូន។
+                អាស្រ័យដោយមើលឃើញពីផលប៉ះពាល់នេះ
+                យុវជនកូនខ្មែរមួយរូបបានកែច្នៃកាកសំណល់ប្លាស្ទិកទៅជាស្នាដៃសិល្បៈថ្មី
+                ទាំងគំនូរ និងរូបចម្លាក់ ដែលកំពុងទទួលបានការស្ញប់ស្ញែងពីសហគមន៍។
+              </p>
 
+              <p class="lh-lg">
+                លោក <strong>រៀម មុនីស៊ីឡុង</strong> សិល្បករពីខេត្តសៀមរាប
+                ត្រូវបានគេស្គាល់ថាជាអ្នកកែច្នៃសំរាមទៅជាស្នាដៃសិល្បៈជាច្រើនទម្រង់
+                ហើយទទួលបានការគាំទ្រពីប្រជាពលរដ្ឋ ស្ថាប័ន
+                និងអង្គការក្រៅរដ្ឋាភិបាល រហូតទទួលបានពានរង្វាន់ជាច្រើន។
+              </p>
 
-<body>
+              <p class="lh-lg">
+                ការចំណាយពេលក្នុងការផលិតអាស្រ័យលើទំហំស្នាដៃ៖ ស្នាដៃតូចៗប្រហែល ១–២
+                សប្ដាហ៍ ខណៈស្នាដៃធំៗអាចចំណាយពេល ១–២ ខែ
+                ហើយតម្រូវឱ្យមានកម្លាំងបន្ថែមពីក្រុមការងារ។ មុនពេលវិបត្តិកូវីដ
+                លោកមានក្រុមប្រមាណ ១០ នាក់ជួយផលិត។
+              </p>
 
-  <main>
-    <section class="py-5">
-      <div class="container bg-light p-4 rounded-3 shadow-sm">
-        <!-- Title -->
-        <h2 class="fw-bold mb-4 text-center text-success">
-          ពីសំរាមប្លាស្ទិក កែច្នៃក្លាយទៅជាសិល្បៈគំនូរ និងរូបចម្លាក់ដ៏គួរឱ្យកោតសរសើរ
-        </h2>
+              <p class="lh-lg">
+                លោកបានចាប់ផ្ដើមអាជីពនេះតាំងពីឆ្នាំ ២០០៩
+                បន្ទាប់ពីបញ្ឈប់ការងារជាជាងគំនូរតាមវត្តអារាម
+                ហើយបានរៀនកែច្នៃក្រដាសចាស់ៗ ទៅជាគ្រឿងតាំងលម្អ។ ពេលក្រោយ
+                លោកចូលរួមកែច្នៃសំណល់សរីរាង្គ សំណល់ផ្ទះបាយ និងប្លាស្ទិកបញ្ចូលគ្នា
+                ទៅជាស្នាដៃសិល្បៈប្លែកៗ។
+              </p>
 
-        <div class="row g-4 align-items-start">
-          <!-- Content -->
-          <div class="col-lg-8">
-            <p class="lh-lg">
-              ប្លាស្ទិក បន្ទាប់ពីប្រើប្រាស់រួចហើយនឹងក្លាយទៅជាសំណល់មួយប្រភេទដែលប៉ះពាល់យ៉ាងខ្លាំងដល់បរិស្ថាន
-              ព្រោះវាមិនងាយរលាយ កប់ក្នុងដីក៏ពិបាក បោះក្នុងទឹកក៏មិនកើត ហើយបើដុតចោលក៏បង្កជាផ្សែងពុលប៉ះពាល់ដល់បរិយាកាស
-              និងស្រទាប់អូហ្សូន។ អាស្រ័យដោយមើលឃើញពីផលប៉ះពាល់នេះ
-              យុវជនកូនខ្មែរមួយរូបបានកែច្នៃកាកសំណល់ប្លាស្ទិកទៅជាស្នាដៃសិល្បៈថ្មី
-              ទាំងគំនូរ និងរូបចម្លាក់ ដែលកំពុងទទួលបានការស្ញប់ស្ញែងពីសហគមន៍។
-            </p>
+              <p class="lh-lg">
+                ទោះបីជាមានផលប៉ះពាល់ដូចជាក្លិនមិនល្អ ឬការដឹកជញ្ជូនពិបាក
+                លោកមុនីស៊ីឡុងមានគម្រោងបង្កើតក្រុមរឹងមាំមួយ និងបើកជាសាលកែច្នៃ
+                ដើម្បីរក្សា និងបង្ហាញស្នាដៃដល់ភ្ញៀវជាតិ និងអន្តរជាតិ
+                ជាការចូលរួមសម្អាតបរិស្ថាន និងកាត់បន្ថយសំណល់ប្លាស្ទិក។
+              </p>
+            </div>
 
-            <p class="lh-lg">
-              លោក <strong>រៀម មុនីស៊ីឡុង</strong> សិល្បករពីខេត្តសៀមរាប
-              ត្រូវបានគេស្គាល់ថាជាអ្នកកែច្នៃសំរាមទៅជាស្នាដៃសិល្បៈជាច្រើនទម្រង់
-              ហើយទទួលបានការគាំទ្រពីប្រជាពលរដ្ឋ ស្ថាប័ន និងអង្គការក្រៅរដ្ឋាភិបាល
-              រហូតទទួលបានពានរង្វាន់ជាច្រើន។
-            </p>
-
-            <p class="lh-lg">
-              ការចំណាយពេលក្នុងការផលិតអាស្រ័យលើទំហំស្នាដៃ៖
-              ស្នាដៃតូចៗប្រហែល ១–២ សប្ដាហ៍ ខណៈស្នាដៃធំៗអាចចំណាយពេល ១–២ ខែ
-              ហើយតម្រូវឱ្យមានកម្លាំងបន្ថែមពីក្រុមការងារ។
-              មុនពេលវិបត្តិកូវីដ លោកមានក្រុមប្រមាណ ១០ នាក់ជួយផលិត។
-            </p>
-
-            <p class="lh-lg">
-              លោកបានចាប់ផ្ដើមអាជីពនេះតាំងពីឆ្នាំ ២០០៩ បន្ទាប់ពីបញ្ឈប់ការងារជាជាងគំនូរតាមវត្តអារាម
-              ហើយបានរៀនកែច្នៃក្រដាសចាស់ៗ ទៅជាគ្រឿងតាំងលម្អ។
-              ពេលក្រោយ លោកចូលរួមកែច្នៃសំណល់សរីរាង្គ សំណល់ផ្ទះបាយ និងប្លាស្ទិកបញ្ចូលគ្នា
-              ទៅជាស្នាដៃសិល្បៈប្លែកៗ។
-            </p>
-
-            <p class="lh-lg">
-              ទោះបីជាមានផលប៉ះពាល់ដូចជាក្លិនមិនល្អ ឬការដឹកជញ្ជូនពិបាក
-              លោកមុនីស៊ីឡុងមានគម្រោងបង្កើតក្រុមរឹងមាំមួយ និងបើកជាសាលកែច្នៃ
-              ដើម្បីរក្សា និងបង្ហាញស្នាដៃដល់ភ្ញៀវជាតិ និងអន្តរជាតិ
-              ជាការចូលរួមសម្អាតបរិស្ថាន និងកាត់បន្ថយសំណល់ប្លាស្ទិក។
-            </p>
-          </div>
-
-          <!-- Image -->
-          <div class="col-lg-4 text-center">
-            <img src="assets/minea/img/image03.png" alt="សិល្បៈពីសំរាមប្លាស្ទិក"
-              class="img-fluid rounded-3 shadow-sm" />
-            <img src="assets/minea/img/image05.png" alt="សិល្បៈពីសំរាមប្លាស្ទិក" class="img-fluid rounded-3 shadow-sm"
-              style="margin-top: 30px;" />
+            <!-- Image -->
+            <div class="col-lg-4 text-center">
+              <img
+                src="assets/minea/img/image03.png"
+                alt="សិល្បៈពីសំរាមប្លាស្ទិក"
+                class="img-fluid rounded-3 shadow-sm"
+              />
+              <img
+                src="assets/minea/img/image05.png"
+                alt="សិល្បៈពីសំរាមប្លាស្ទិក"
+                class="img-fluid rounded-3 shadow-sm"
+                style="margin-top: 30px"
+              />
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section>
-      <div class="container py-5">
-        <h3>អត្ថបទផ្សេងៗ</h3>
-        <div class="swiper">
-          <!-- Wrapper -->
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div class="card">
-                <a href="Plastic_doc.html" class="text-decoration-none text-dark">
-                  <div class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3">
-                    <img src="assets/minea/img/image02.png" alt="ការកែច្នៃផ្លាស្ទិក" class="card-img-top rounded-top-3"
-                      style="height: 300px;" />
-                    <div class="card-body">
-                      <p class="card-text">
-                        សំរាមប្លាស្ទិក ត្រូវបានកែច្នៃប្រើជាវត្ថុធាតុផ្សំយ៉ាងសំខាន់ក្នុងការផលិតឥដ្ឋបរិស្ថាន
-                      </p>
+      <section>
+        <div class="container py-5">
+          <h3>អត្ថបទផ្សេងៗ</h3>
+          <div class="swiper">
+            <!-- Wrapper -->
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="card">
+                  <a
+                    href="Plastic_doc.html"
+                    class="text-decoration-none text-dark"
+                  >
+                    <div
+                      class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
+                    >
+                      <img
+                        src="assets/minea/img/image02.png"
+                        alt="ការកែច្នៃផ្លាស្ទិក"
+                        class="card-img-top rounded-top-3"
+                        style="height: 300px"
+                      />
+                      <div class="card-body">
+                        <p class="card-text">
+                          សំរាមប្លាស្ទិក
+                          ត្រូវបានកែច្នៃប្រើជាវត្ថុធាតុផ្សំយ៉ាងសំខាន់ក្នុងការផលិតឥដ្ឋបរិស្ថាន
+                        </p>
+                      </div>
                     </div>
-                  </div>
-                </a>
+                  </a>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="card">
+                  <a
+                    href="Plastic_doc01.html"
+                    class="text-decoration-none text-dark"
+                  >
+                    <div
+                      class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
+                    >
+                      <img
+                        src="assets/minea/img/image04.png"
+                        alt="ការកែច្នៃផ្លាស្ទិក"
+                        class="card-img-top rounded-top-3"
+                        style="height: 300px"
+                      />
+                      <div class="card-body">
+                        <p class="card-text">
+                          ពីសំរាមប្លាស្ទិក កែច្នៃក្លាយទៅជាសិល្បៈគំនូរ
+                          និងរូបចម្លាក់ដ៏គួរឱ្យកោតសរសើរ
+                        </p>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="card">
+                  <a
+                    href="Plastic_doc.html"
+                    class="text-decoration-none text-dark"
+                  >
+                    <div
+                      class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
+                    >
+                      <img
+                        src="assets/minea/img/maxresdefault.jpg"
+                        alt="ការកែច្នៃផ្លាស្ទិក"
+                        class="card-img-top rounded-top-3"
+                        style="height: 300px"
+                      />
+                      <div class="card-body">
+                        <p class="card-text">
+                          តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
+                        </p>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="card">
+                  <a
+                    href="Plastic_doc.html"
+                    class="text-decoration-none text-dark"
+                  >
+                    <div
+                      class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
+                    >
+                      <img
+                        src="assets/minea/img/image02.png"
+                        alt="ការកែច្នៃផ្លាស្ទិក"
+                        class="card-img-top rounded-top-3"
+                        style="height: 300px"
+                      />
+                      <div class="card-body">
+                        <p class="card-text">
+                          សំរាមប្លាស្ទិក
+                          ត្រូវបានកែច្នៃប្រើជាវត្ថុធាតុផ្សំយ៉ាងសំខាន់ក្នុងការផលិតឥដ្ឋបរិស្ថាន
+                        </p>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="card">
+                  <a
+                    href="Plastic_doc01.html"
+                    class="text-decoration-none text-dark"
+                  >
+                    <div
+                      class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
+                    >
+                      <img
+                        src="assets/minea/img/image04.png"
+                        alt="ការកែច្នៃផ្លាស្ទិក"
+                        class="card-img-top rounded-top-3"
+                        style="height: 300px"
+                      />
+                      <div class="card-body">
+                        <p class="card-text">
+                          ពីសំរាមប្លាស្ទិក កែច្នៃក្លាយទៅជាសិល្បៈគំនូរ
+                          និងរូបចម្លាក់ដ៏គួរឱ្យកោតសរសើរ
+                        </p>
+                      </div>
+                    </div>
+                  </a>
+                </div>
               </div>
             </div>
 
-            <div class="swiper-slide">
-              <div class="card" >
-                <a href="Plastic_doc01.html" class="text-decoration-none text-dark">
-                  <div class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3">
-                    <img src="assets/minea/img/image04.png" alt="ការកែច្នៃផ្លាស្ទិក" class="card-img-top rounded-top-3"
-                      style="height: 300px;" />
-                    <div class="card-body">
-                      <p class="card-text">
-                        ពីសំរាមប្លាស្ទិក កែច្នៃក្លាយទៅជាសិល្បៈគំនូរ និងរូបចម្លាក់ដ៏គួរឱ្យកោតសរសើរ
-                      </p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
+            <!-- Pagination -->
+            <!-- <div class="swiper-pagination"></div> -->
 
-            <div class="swiper-slide">
-              <div class="card">
-                <a href="Plastic_doc.html" class="text-decoration-none text-dark">
-                  <div class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3">
-                    <img src="assets/minea/img/maxresdefault.jpg" alt="ការកែច្នៃផ្លាស្ទិក"
-                      class="card-img-top rounded-top-3" style="height: 300px;" />
-                    <div class="card-body">
-                      <p class="card-text">
-                        តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
-                      </p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div class="card">
-                <a href="Plastic_doc.html" class="text-decoration-none text-dark">
-                  <div class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3">
-                    <img src="assets/minea/img/image02.png" alt="ការកែច្នៃផ្លាស្ទិក" class="card-img-top rounded-top-3"
-                      style="height: 300px;" />
-                    <div class="card-body">
-                      <p class="card-text">
-                        សំរាមប្លាស្ទិក ត្រូវបានកែច្នៃប្រើជាវត្ថុធាតុផ្សំយ៉ាងសំខាន់ក្នុងការផលិតឥដ្ឋបរិស្ថាន
-                      </p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div class="card">
-                <a href="Plastic_doc01.html" class="text-decoration-none text-dark">
-                  <div class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3">
-                    <img src="assets/minea/img/image04.png" alt="ការកែច្នៃផ្លាស្ទិក" class="card-img-top rounded-top-3"
-                      style="height: 300px;" />
-                    <div class="card-body">
-                      <p class="card-text">
-                        ពីសំរាមប្លាស្ទិក កែច្នៃក្លាយទៅជាសិល្បៈគំនូរ និងរូបចម្លាក់ដ៏គួរឱ្យកោតសរសើរ
-                      </p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
+            <!-- Navigation -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
           </div>
-
-          <!-- Pagination -->
-          <!-- <div class="swiper-pagination"></div> -->
-
-          <!-- Navigation -->
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
         </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
 
-
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script>
-    const swiper = new Swiper(".swiper", {
-      slidesPerView: 1,
-      spaceBetween: 20,
-      loop: true,
-      navigation: {
-        nextEl: ".swiper-button-next",
-        prevEl: ".swiper-button-prev",
-      },
-      breakpoints: {
-        576: { slidesPerView: 2 },
-        768: { slidesPerView: 3 },
-        992: { slidesPerView: 4 },
-      },
-    });
-  </script>
-</body>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+      const swiper = new Swiper(".swiper", {
+        slidesPerView: 1,
+        spaceBetween: 20,
+        loop: true,
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+        breakpoints: {
+          576: { slidesPerView: 2 },
+          768: { slidesPerView: 3 },
+          992: { slidesPerView: 4 },
+        },
+      });
+    </script>
+  </body>
 </html>
