--- a/landing.html
+++ b/landing.html
@@ -424,10 +424,13 @@
             </a>
 
             <p class="text-secondary">
-              "Your seamless platform for event management, where creativity
-              meets efficiency. We simplify planning, coordinate every detail,
-              and bring your vision to life for unforgettable experiences that
-              inspire."
+              គេហទំព័រ “សកម្មភាពបៃតង”
+              ត្រូវបានបង្កើតឡើងដោយមានគោលបំណងក្នុងការផ្សព្វផ្សាយ
+              និងចែករំលែកព័ត៌មានអំពីសកម្មភាពបរិស្ថាន។
+              យើងខិតខំផ្តល់ឱ្យអ្នកនូវព័ត៌មានស្តីពីព្រឹត្តិការណ៍ កម្មវិធី
+              និងយុទ្ធនាការដែលជួយការពារបរិស្ថាន និងលើកកម្ពស់ជីវភាពបៃតង។
+              គោលបំណងរបស់យើងគឺដើម្បីបង្កើតការយល់ដឹង
+              និងលើកទឹកចិត្តឲ្យអ្នកទាំងអស់គ្នាចូលរួមក្នុងការការពារបរិស្ថានសម្រាប់ជំនាន់ក្រោយ។
             </p>
           </div>
 
