--- a/newpassword.html
+++ b/newpassword.html
@@ -7,7 +7,7 @@
     <!-- Bootstrap 5 CSS -->
     <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
   </head>
 
@@ -29,7 +29,9 @@
                   </div>
                   <!-- Right Form -->
                   <div class="col-11 col-md-6 col-lg-5">
-                    <h1 class="display-5 fw-bolder text-center text-success mb-3">
+                    <h1
+                      class="display-5 fw-bolder text-center text-success mb-3"
+                    >
                       Gotcha!
                     </h1>
                     <p class="text-secondary text-center mb-4">
@@ -41,7 +43,9 @@
                       <!-- New Password -->
                       <div class="mb-4">
                         <label for="newPassword" class="form-label">
-                          បង្កើតពាក្យសម្ងាត់ថ្មី<span class="text-danger">*</span>
+                          បង្កើតពាក្យសម្ងាត់ថ្មី<span class="text-danger"
+                            >*</span
+                          >
                         </label>
                         <input
                           type="password"
@@ -61,7 +65,10 @@
                       <!-- Confirm Password -->
                       <div class="mb-4">
                         <label for="confirmPassword" class="form-label">
-                          បញ្ជាក់ពាក្យសម្ងាត់ថ្មីរបស់អ្នក<span class="text-danger">*</span>
+                          បញ្ជាក់ពាក្យសម្ងាត់ថ្មីរបស់អ្នក<span
+                            class="text-danger"
+                            >*</span
+                          >
                         </label>
                         <input
                           type="password"
