--- a/user_setting.html
+++ b/user_setting.html
@@ -79,7 +79,10 @@
                 class="navbar-nav justify-content-center flex-grow-1 pe-3 mt-2"
               >
                 <!-- Search (Mobile Only) -->
-                <form class="d-flex mb-3 d-block d-md-none search-1" role="search">
+                <form
+                  class="d-flex mb-3 d-block d-md-none search-1"
+                  role="search"
+                >
                   <input
                     class="form-control"
                     type="search"
