--- a/Plastic_doc.html
+++ b/Plastic_doc.html
@@ -1,189 +1,252 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="assets/chhorng/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/d9ad53b8e3.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="stylesheet" href="assets/css/theme.css" />
-  <link rel="stylesheet" href="assets/chhorng/style.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-  <script src="https://kit.fontawesome.com/d9ad53b8e3.js" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-</head>
+  <body>
+    <main>
+      <section class="py-5">
+        <div class="container bg-light p-4 rounded-3 shadow-sm">
+          <!-- Title -->
+          <h2 class="fw-bold mb-4 text-center text-success">
+            សំរាមប្លាស្ទិក
+            ត្រូវបានកែច្នៃប្រើជាវត្ថុធាតុផ្សំយ៉ាងសំខាន់ក្នុងការផលិតឥដ្ឋបរិស្ថាន
+          </h2>
 
-<body>
+          <div class="row g-4 align-items-center">
+            <!-- Text -->
+            <div class="col-lg-8">
+              <p class="lh-lg">
+                <strong>AKP សៀមរាប ថ្ងៃទី២០ ខែសីហា ឆ្នាំ២០២៣</strong> –
+                សំណល់សំរាមប្លាស្ទិក ដែលកំពុងបង្កជាការព្រួយបារម្ភជាសកល
+                អំពីការបំពុលបរិស្ថាននោះ ត្រូវបានប្រជាពលរដ្ឋខ្មែរ
+                រួមគ្នាយកមកកែច្នៃធ្វើជាវត្ថុធាតុផ្សំយ៉ាងសំខាន់មួយក្នុងការផលិតជាឥដ្ឋសំណង់
+                ដែលមានឈ្មោះថា <strong>ឥដ្ឋអេកូ</strong>។
+              </p>
 
+              <p class="lh-lg">
+                លោក សុខ ធី ដែលជាអ្នកផ្តួចផ្តើមគំនិតផលិតឥដ្ឋអេកូ បានបញ្ជាក់ថា
+                គោលបំណងនៃការផលិតនេះ ផ្តើមចេញពីការគិតគូរលើរឿងសំខាន់ចំនួន ២៖
+                ការបំពុលបរិស្ថានដោយសំរាមប្លាស្ទិក និងការកាប់ឈើពីព្រៃធម្មជាតិ
+                មកធ្វើជាអុសដើម្បីដុតឥដ្ឋប្រពៃណី។
+              </p>
 
-  <main>
-    <section class="py-5">
-      <div class="container bg-light p-4 rounded-3 shadow-sm">
-        <!-- Title -->
-        <h2 class="fw-bold mb-4 text-center text-success">
-          សំរាមប្លាស្ទិក ត្រូវបានកែច្នៃប្រើជាវត្ថុធាតុផ្សំយ៉ាងសំខាន់ក្នុងការផលិតឥដ្ឋបរិស្ថាន
-        </h2>
+              <p class="lh-lg">
+                ចំណែកឥដ្ឋអេកូ វាប្រើវត្ថុធាតុផ្សំដូចជា ស៊ីម៉ង់ត៍ ដីខ្សាច់
+                កម្ទេចសំរាមប្លាស្ទិក និងដីក្រហម
+                លាយបញ្ចូលគ្នារួចចាក់ទៅក្នុងពុម្ព។
+                ការផលិតឥដ្ឋអេកូមានអត្ថប្រយោជន៍ដល់បរិស្ថាន
+                និងជួយកាត់បន្ថយភាពក្រីក្ររបស់សហគមន៍។
+              </p>
 
-        <div class="row g-4 align-items-center">
-          <!-- Text -->
-          <div class="col-lg-8">
-            <p class="lh-lg">
-              <strong>AKP សៀមរាប ថ្ងៃទី២០ ខែសីហា ឆ្នាំ២០២៣</strong> – សំណល់សំរាមប្លាស្ទិក
-              ដែលកំពុងបង្កជាការព្រួយបារម្ភជាសកល អំពីការបំពុលបរិស្ថាននោះ ត្រូវបានប្រជាពលរដ្ឋខ្មែរ
-              រួមគ្នាយកមកកែច្នៃធ្វើជាវត្ថុធាតុផ្សំយ៉ាងសំខាន់មួយក្នុងការផលិតជាឥដ្ឋសំណង់
-              ដែលមានឈ្មោះថា <strong>ឥដ្ឋអេកូ</strong>។
-            </p>
+              <p class="lh-lg">
+                លោក យុក សេងឡុង នាយកប្រតិបត្តិអង្គការសម្ព័ន្ធភាពអភិរក្សធនធានជលផល
+                បានបន្ថែមថា ការប្រើប្រាស់ឥដ្ឋអេកូផ្តល់អត្ថប្រយោជន៍ ៣៖ (១)
+                ជួយលើកកម្ពស់ជីវភាពប្រជាពលរដ្ឋក្នុងសហគមន៍, (២) ប្រាក់ចំណូល១០%
+                ត្រូវបានប្រើសម្រាប់អភិរក្សធនធានជលផល, (៣)
+                កាត់បន្ថយការបំពុលបរិស្ថានដោយសំរាមប្លាស្ទិក។
+              </p>
 
-            <p class="lh-lg">
-              លោក សុខ ធី ដែលជាអ្នកផ្តួចផ្តើមគំនិតផលិតឥដ្ឋអេកូ បានបញ្ជាក់ថា គោលបំណងនៃការផលិតនេះ
-              ផ្តើមចេញពីការគិតគូរលើរឿងសំខាន់ចំនួន ២៖ ការបំពុលបរិស្ថានដោយសំរាមប្លាស្ទិក
-              និងការកាប់ឈើពីព្រៃធម្មជាតិ មកធ្វើជាអុសដើម្បីដុតឥដ្ឋប្រពៃណី។
-            </p>
+              <p class="text-muted">ដោយ៖ ឃុត សៅ</p>
+            </div>
 
-            <p class="lh-lg">
-              ចំណែកឥដ្ឋអេកូ វាប្រើវត្ថុធាតុផ្សំដូចជា ស៊ីម៉ង់ត៍ ដីខ្សាច់ កម្ទេចសំរាមប្លាស្ទិក និងដីក្រហម
-              លាយបញ្ចូលគ្នារួចចាក់ទៅក្នុងពុម្ព។ ការផលិតឥដ្ឋអេកូមានអត្ថប្រយោជន៍ដល់បរិស្ថាន
-              និងជួយកាត់បន្ថយភាពក្រីក្ររបស់សហគមន៍។
-            </p>
-
-            <p class="lh-lg">
-              លោក យុក សេងឡុង នាយកប្រតិបត្តិអង្គការសម្ព័ន្ធភាពអភិរក្សធនធានជលផល បានបន្ថែមថា
-              ការប្រើប្រាស់ឥដ្ឋអេកូផ្តល់អត្ថប្រយោជន៍ ៣៖
-              (១) ជួយលើកកម្ពស់ជីវភាពប្រជាពលរដ្ឋក្នុងសហគមន៍,
-              (២) ប្រាក់ចំណូល១០% ត្រូវបានប្រើសម្រាប់អភិរក្សធនធានជលផល,
-              (៣) កាត់បន្ថយការបំពុលបរិស្ថានដោយសំរាមប្លាស្ទិក។
-            </p>
-
-            <p class="text-muted">ដោយ៖ ឃុត សៅ</p>
-          </div>
-
-          <!-- Image -->
-          <div class="col-lg-4 text-center">
-            <img src="assets/minea/img/image01.png" alt="ឥដ្ឋអេកូ" class="img-fluid rounded-3 shadow-sm" />
+            <!-- Image -->
+            <div class="col-lg-4 text-center">
+              <img
+                src="assets/minea/img/image01.png"
+                alt="ឥដ្ឋអេកូ"
+                class="img-fluid rounded-3 shadow-sm"
+              />
+            </div>
           </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section>
-      <div class="container py-5">
-        <h3>អត្ថបទផ្សេងៗ</h3>
-        <div class="swiper">
-          <!-- Wrapper -->
-          <div class="swiper-wrapper">
-            <div class="swiper-slide">
-              <div class="card">
-                <a href="Plastic_doc.html" class="text-decoration-none text-dark">
-                  <div class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3">
-                    <img src="assets/minea/img/image02.png" alt="ការកែច្នៃផ្លាស្ទិក" class="card-img-top rounded-top-3"
-                      style="height: 300px;" />
-                    <div class="card-body">
-                      <p class="card-text">
-                        សំរាមប្លាស្ទិក ត្រូវបានកែច្នៃប្រើជាវត្ថុធាតុផ្សំយ៉ាងសំខាន់ក្នុងការផលិតឥដ្ឋបរិស្ថាន
-                      </p>
+      <section>
+        <div class="container py-5">
+          <h3>អត្ថបទផ្សេងៗ</h3>
+          <div class="swiper">
+            <!-- Wrapper -->
+            <div class="swiper-wrapper">
+              <div class="swiper-slide">
+                <div class="card">
+                  <a
+                    href="Plastic_doc.html"
+                    class="text-decoration-none text-dark"
+                  >
+                    <div
+                      class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
+                    >
+                      <img
+                        src="assets/minea/img/image02.png"
+                        alt="ការកែច្នៃផ្លាស្ទិក"
+                        class="card-img-top rounded-top-3"
+                        style="height: 300px"
+                      />
+                      <div class="card-body">
+                        <p class="card-text">
+                          សំរាមប្លាស្ទិក
+                          ត្រូវបានកែច្នៃប្រើជាវត្ថុធាតុផ្សំយ៉ាងសំខាន់ក្នុងការផលិតឥដ្ឋបរិស្ថាន
+                        </p>
+                      </div>
                     </div>
-                  </div>
-                </a>
+                  </a>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="card">
+                  <a
+                    href="Plastic_doc01.html"
+                    class="text-decoration-none text-dark"
+                  >
+                    <div
+                      class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
+                    >
+                      <img
+                        src="assets/minea/img/image04.png"
+                        alt="ការកែច្នៃផ្លាស្ទិក"
+                        class="card-img-top rounded-top-3"
+                        style="height: 300px"
+                      />
+                      <div class="card-body">
+                        <p class="card-text">
+                          ពីសំរាមប្លាស្ទិក កែច្នៃក្លាយទៅជាសិល្បៈគំនូរ
+                          និងរូបចម្លាក់ដ៏គួរឱ្យកោតសរសើរ
+                        </p>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="card">
+                  <a
+                    href="Plastic_doc.html"
+                    class="text-decoration-none text-dark"
+                  >
+                    <div
+                      class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
+                    >
+                      <img
+                        src="assets/minea/img/maxresdefault.jpg"
+                        alt="ការកែច្នៃផ្លាស្ទិក"
+                        class="card-img-top rounded-top-3"
+                        style="height: 300px"
+                      />
+                      <div class="card-body">
+                        <p class="card-text">
+                          តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
+                        </p>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="card">
+                  <a
+                    href="Plastic_doc.html"
+                    class="text-decoration-none text-dark"
+                  >
+                    <div
+                      class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
+                    >
+                      <img
+                        src="assets/minea/img/image02.png"
+                        alt="ការកែច្នៃផ្លាស្ទិក"
+                        class="card-img-top rounded-top-3"
+                        style="height: 300px"
+                      />
+                      <div class="card-body">
+                        <p class="card-text">
+                          សំរាមប្លាស្ទិក
+                          ត្រូវបានកែច្នៃប្រើជាវត្ថុធាតុផ្សំយ៉ាងសំខាន់ក្នុងការផលិតឥដ្ឋបរិស្ថាន
+                        </p>
+                      </div>
+                    </div>
+                  </a>
+                </div>
+              </div>
+
+              <div class="swiper-slide">
+                <div class="card">
+                  <a
+                    href="Plastic_doc01.html"
+                    class="text-decoration-none text-dark"
+                  >
+                    <div
+                      class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
+                    >
+                      <img
+                        src="assets/minea/img/image04.png"
+                        alt="ការកែច្នៃផ្លាស្ទិក"
+                        class="card-img-top rounded-top-3"
+                        style="height: 300px"
+                      />
+                      <div class="card-body">
+                        <p class="card-text">
+                          ពីសំរាមប្លាស្ទិក កែច្នៃក្លាយទៅជាសិល្បៈគំនូរ
+                          និងរូបចម្លាក់ដ៏គួរឱ្យកោតសរសើរ
+                        </p>
+                      </div>
+                    </div>
+                  </a>
+                </div>
               </div>
             </div>
 
-            <div class="swiper-slide">
-              <div class="card" >
-                <a href="Plastic_doc01.html" class="text-decoration-none text-dark">
-                  <div class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3">
-                    <img src="assets/minea/img/image04.png" alt="ការកែច្នៃផ្លាស្ទិក" class="card-img-top rounded-top-3"
-                      style="height: 300px;" />
-                    <div class="card-body">
-                      <p class="card-text">
-                        ពីសំរាមប្លាស្ទិក កែច្នៃក្លាយទៅជាសិល្បៈគំនូរ និងរូបចម្លាក់ដ៏គួរឱ្យកោតសរសើរ
-                      </p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
+            <!-- Pagination -->
+            <!-- <div class="swiper-pagination"></div> -->
 
-            <div class="swiper-slide">
-              <div class="card">
-                <a href="Plastic_doc.html" class="text-decoration-none text-dark">
-                  <div class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3">
-                    <img src="assets/minea/img/maxresdefault.jpg" alt="ការកែច្នៃផ្លាស្ទិក"
-                      class="card-img-top rounded-top-3" style="height: 300px;" />
-                    <div class="card-body">
-                      <p class="card-text">
-                        តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
-                      </p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div class="card">
-                <a href="Plastic_doc.html" class="text-decoration-none text-dark">
-                  <div class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3">
-                    <img src="assets/minea/img/image02.png" alt="ការកែច្នៃផ្លាស្ទិក" class="card-img-top rounded-top-3"
-                      style="height: 300px;" />
-                    <div class="card-body">
-                      <p class="card-text">
-                        សំរាមប្លាស្ទិក ត្រូវបានកែច្នៃប្រើជាវត្ថុធាតុផ្សំយ៉ាងសំខាន់ក្នុងការផលិតឥដ្ឋបរិស្ថាន
-                      </p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
-
-            <div class="swiper-slide">
-              <div class="card">
-                <a href="Plastic_doc01.html" class="text-decoration-none text-dark">
-                  <div class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3">
-                    <img src="assets/minea/img/image04.png" alt="ការកែច្នៃផ្លាស្ទិក" class="card-img-top rounded-top-3"
-                      style="height: 300px;" />
-                    <div class="card-body">
-                      <p class="card-text">
-                        ពីសំរាមប្លាស្ទិក កែច្នៃក្លាយទៅជាសិល្បៈគំនូរ និងរូបចម្លាក់ដ៏គួរឱ្យកោតសរសើរ
-                      </p>
-                    </div>
-                  </div>
-                </a>
-              </div>
-            </div>
+            <!-- Navigation -->
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
           </div>
-
-          <!-- Pagination -->
-          <!-- <div class="swiper-pagination"></div> -->
-
-          <!-- Navigation -->
-          <div class="swiper-button-prev"></div>
-          <div class="swiper-button-next"></div>
         </div>
-      </div>
-    </section>
-  </main>
+      </section>
+    </main>
 
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script>
-    const swiper = new Swiper(".swiper", {
-      slidesPerView: 1,
-      spaceBetween: 20,
-      loop: true,
-      navigation: {
-        nextEl: ".swiper-button-next",
-        prevEl: ".swiper-button-prev",
-      },
-      breakpoints: {
-        576: { slidesPerView: 2 },
-        768: { slidesPerView: 3 },
-        992: { slidesPerView: 4 },
-      },
-    });
-  </script>
-</body>
-
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script>
+      const swiper = new Swiper(".swiper", {
+        slidesPerView: 1,
+        spaceBetween: 20,
+        loop: true,
+        navigation: {
+          nextEl: ".swiper-button-next",
+          prevEl: ".swiper-button-prev",
+        },
+        breakpoints: {
+          576: { slidesPerView: 2 },
+          768: { slidesPerView: 3 },
+          992: { slidesPerView: 4 },
+        },
+      });
+    </script>
+  </body>
 </html>
