--- a/forgetpassword.html
+++ b/forgetpassword.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
     <!-- Custom CSS -->
     <link rel="stylesheet" href="assets/css/theme.css" />
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
   </head>
 
   <body class="forgetpwd-page">
