--- a/frist_doc.html
+++ b/frist_doc.html
@@ -1,105 +1,161 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <link rel="stylesheet" href="assets/css/theme.css" />
+    <link rel="stylesheet" href="assets/chhorng/style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script
+      src="https://kit.fontawesome.com/d9ad53b8e3.js"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
+  </head>
 
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <link rel="stylesheet" href="assets/css/theme.css" />
-  <link rel="stylesheet" href="assets/chhorng/style.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
-  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-  <script src="https://kit.fontawesome.com/d9ad53b8e3.js" crossorigin="anonymous"></script>
-  <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-</head>
+  <body>
+    <main>
+      <section class="py-5">
+        <div class="container bg-light bg-opacity-75 p-4 rounded-3 shadow-sm">
+          <div class="row gy-4">
+            <!-- Card -->
+            <div class="col-md-6 col-lg-4">
+              <a href="Plastic_doc.html" class="text-decoration-none text-dark">
+                <div
+                  class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
+                >
+                  <img
+                    src="assets/minea/img/image02.png"
+                    alt="ការកែច្នៃផ្លាស្ទិក"
+                    class="card-img-top rounded-top-3"
+                    style="height: 300px"
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      សំរាមប្លាស្ទិក
+                      ត្រូវបានកែច្នៃប្រើជាវត្ថុធាតុផ្សំយ៉ាងសំខាន់ក្នុងការផលិតឥដ្ឋបរិស្ថាន
+                    </p>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <a
+                href="Plastic_doc01.html"
+                class="text-decoration-none text-dark"
+              >
+                <div
+                  class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
+                >
+                  <img
+                    src="assets/minea/img/image04.png"
+                    alt="ការកែច្នៃផ្លាស្ទិក"
+                    class="card-img-top rounded-top-3"
+                    style="height: 300px"
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      ពីសំរាមប្លាស្ទិក កែច្នៃក្លាយទៅជាសិល្បៈគំនូរ
+                      និងរូបចម្លាក់ដ៏គួរឱ្យកោតសរសើរ
+                    </p>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <a href="Plastic_doc.html" class="text-decoration-none text-dark">
+                <div
+                  class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
+                >
+                  <img
+                    src="assets/minea/img/maxresdefault.jpg"
+                    alt="ការកែច្នៃផ្លាស្ទិក"
+                    class="card-img-top rounded-top-3"
+                    style="height: 300px"
+                  />
+                  <div class="card-body">
+                    <p class="card-text">តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?</p>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <a href="Plastic_doc.html" class="text-decoration-none text-dark">
+                <div
+                  class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
+                >
+                  <img
+                    src="assets/minea/img/image02.png"
+                    alt="ការកែច្នៃផ្លាស្ទិក"
+                    class="card-img-top rounded-top-3"
+                    style="height: 300px"
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      សំរាមប្លាស្ទិក
+                      ត្រូវបានកែច្នៃប្រើជាវត្ថុធាតុផ្សំយ៉ាងសំខាន់ក្នុងការផលិតឥដ្ឋបរិស្ថាន
+                    </p>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <a
+                href="Plastic_doc01.html"
+                class="text-decoration-none text-dark"
+              >
+                <div
+                  class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
+                >
+                  <img
+                    src="assets/minea/img/image04.png"
+                    alt="ការកែច្នៃផ្លាស្ទិក"
+                    class="card-img-top rounded-top-3"
+                    style="height: 300px"
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      ពីសំរាមប្លាស្ទិក កែច្នៃក្លាយទៅជាសិល្បៈគំនូរ
+                      និងរូបចម្លាក់ដ៏គួរឱ្យកោតសរសើរ
+                    </p>
+                  </div>
+                </div>
+              </a>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <a
+                href="Plastic_doc01.html"
+                class="text-decoration-none text-dark"
+              >
+                <div
+                  class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
+                >
+                  <img
+                    src="assets/minea/img/img01.png"
+                    alt="ការកែច្នៃផ្លាស្ទិក"
+                    class="card-img-top rounded-top-3"
+                    style="height: 300px"
+                  />
+                  <div class="card-body">
+                    <p class="card-text">
+                      គុណសម្បត្តិនៃការប្រើប្រាស់សម្ភារៈកែច្នៃឡើងវិញក្នុងការបន្ថែម
+                    </p>
+                  </div>
+                </div>
+              </a>
+            </div>
 
-<body>
-  <main>
-    <section class="py-5">
-      <div class="container bg-light bg-opacity-75 p-4 rounded-3 shadow-sm">
-        <div class="row gy-4">
-          <!-- Card -->
-          <div class="col-md-6 col-lg-4">
-            <a href="Plastic_doc.html" class="text-decoration-none text-dark">
-              <div class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3">
-                <img src="assets/minea/img/image02.png" alt="ការកែច្នៃផ្លាស្ទិក" class="card-img-top rounded-top-3" style="height: 300px;"/>
-                <div class="card-body">
-                  <p class="card-text">
-                    សំរាមប្លាស្ទិក ត្រូវបានកែច្នៃប្រើជាវត្ថុធាតុផ្សំយ៉ាងសំខាន់ក្នុងការផលិតឥដ្ឋបរិស្ថាន
-                  </p>
-                </div>
-              </div>
-            </a>
+            <!-- End Card -->
           </div>
-          <div class="col-md-6 col-lg-4">
-            <a href="Plastic_doc01.html" class="text-decoration-none text-dark">
-              <div class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3">
-                <img src="assets/minea/img/image04.png" alt="ការកែច្នៃផ្លាស្ទិក" class="card-img-top rounded-top-3" style="height: 300px;" />
-                <div class="card-body">
-                  <p class="card-text">
-                    ពីសំរាមប្លាស្ទិក កែច្នៃក្លាយទៅជាសិល្បៈគំនូរ និងរូបចម្លាក់ដ៏គួរឱ្យកោតសរសើរ
-                  </p>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a href="Plastic_doc.html" class="text-decoration-none text-dark">
-              <div class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3">
-                <img src="assets/minea/img/maxresdefault.jpg" alt="ការកែច្នៃផ្លាស្ទិក" class="card-img-top rounded-top-3" style="height: 300px;"/>
-                <div class="card-body">
-                  <p class="card-text">
-                    តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
-                  </p>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a href="Plastic_doc.html" class="text-decoration-none text-dark">
-              <div class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3">
-                <img src="assets/minea/img/image02.png" alt="ការកែច្នៃផ្លាស្ទិក" class="card-img-top rounded-top-3" style="height: 300px;"/>
-                <div class="card-body">
-                  <p class="card-text">
-                    សំរាមប្លាស្ទិក ត្រូវបានកែច្នៃប្រើជាវត្ថុធាតុផ្សំយ៉ាងសំខាន់ក្នុងការផលិតឥដ្ឋបរិស្ថាន
-                  </p>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a href="Plastic_doc01.html" class="text-decoration-none text-dark">
-              <div class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3">
-                <img src="assets/minea/img/image04.png" alt="ការកែច្នៃផ្លាស្ទិក" class="card-img-top rounded-top-3" style="height: 300px;" />
-                <div class="card-body">
-                  <p class="card-text">
-                    ពីសំរាមប្លាស្ទិក កែច្នៃក្លាយទៅជាសិល្បៈគំនូរ និងរូបចម្លាក់ដ៏គួរឱ្យកោតសរសើរ
-                  </p>
-                </div>
-              </div>
-            </a>
-          </div>
-          <div class="col-md-6 col-lg-4">
-            <a href="Plastic_doc01.html" class="text-decoration-none text-dark">
-              <div class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3">
-                <img src="assets/minea/img/img01.png" alt="ការកែច្នៃផ្លាស្ទិក" class="card-img-top rounded-top-3" style="height: 300px;"/>
-                <div class="card-body">
-                  <p class="card-text">
-                    គុណសម្បត្តិនៃការប្រើប្រាស់សម្ភារៈកែច្នៃឡើងវិញក្នុងការបន្ថែម
-                  </p>
-                </div>
-              </div>
-            </a>
-          </div>
-          
-          <!-- End Card -->
         </div>
-      </div>
-    </section>
-
-  </main>
-</body>
-
+      </section>
+    </main>
+  </body>
 </html>
