--- a/register.html
+++ b/register.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Log in | Sign up</title>
     <!-- css  -->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="assets/css/style.css" />
     <!-- Suo LyLay  -->
     <link rel="stylesheet" href="assets/css/theme.css" />
     <!-- bs5  -->
