--- a/video1.html
+++ b/video1.html
@@ -1,150 +1,192 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Education with Video</title>
+    <!-- link css -->
+    <link rel="stylesheet" href="assets/minea/css/minea.css" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+    <!-- link bs -->
+    <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
+    <!-- link vdo -->
+    <link rel="stylesheet" href="https://cdn.plyr.io/3.8.3/plyr.css" />
+    <!-- link bs -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
+    />
+  </head>
 
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Education with Video</title>
-  <!-- link css -->
-  <link rel="stylesheet" href="assets/minea/css/minea.css" />
-  <link rel="stylesheet" href="assets/css/style.css" />
-  <!-- link bs -->
-  <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
-  <!-- link vdo -->
-  <link rel="stylesheet" href="https://cdn.plyr.io/3.8.3/plyr.css" />
-  <!-- link bs -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
-</head>
+  <body>
+    <main>
+      <div class="container mt-4">
+        <div class="row">
+          <div class="col-md-8">
+            <div class="card mb-4">
+              <video
+                id="player"
+                playsinline
+                controls
+                data-poster="/path/to/poster.jpg"
+                class="rounded-top-2"
+              >
+                <source src="assets/minea/video/0919(1).mp4" type="video/mp4" />
 
-<body>
-  <main>
-    <div class="container mt-4">
-      <div class="row">
-        <div class="col-md-8">
-          <div class="card mb-4">
-            <video id="player" playsinline controls data-poster="/path/to/poster.jpg" class="rounded-top-2">
-              <source src="assets/minea/video/0919(1).mp4" type="video/mp4" />
+                <!-- Captions are optional -->
+                <track
+                  kind="captions"
+                  label="English captions"
+                  src="/path/to/captions.vtt"
+                  srclang="en"
+                  default
+                />
+              </video>
+              <div class="card-body">
+                <h5 class="card-title">
+                  ប្រមូលសម្រាមផ្លាស្ទិច២០០០តោន កែច្នៃប្រើឡើងវិញ ជួយបរិស្ថាន
+                  និងសមុទ្រខ្មែរ | កម្មវិធីក្ដីស្រមៃខ្ញុំ
+                </h5>
+                <p class="card-text text-secondary">ប្រភព : SBM News</p>
+                <p class="card-text">
+                  <span class="text-warning"
+                    >9.4
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-fill"></i>
+                    <i class="bi bi-star-half"></i>
+                    <i class="bi bi-star"></i
+                  ></span>
 
-              <!-- Captions are optional -->
-              <track kind="captions" label="English captions" src="/path/to/captions.vtt" srclang="en" default />
-            </video>
-            <div class="card-body">
-              <h5 class="card-title">
-                ប្រមូលសម្រាមផ្លាស្ទិច២០០០តោន កែច្នៃប្រើឡើងវិញ ជួយបរិស្ថាន
-                និងសមុទ្រខ្មែរ | កម្មវិធីក្ដីស្រមៃខ្ញុំ
-              </h5>
-              <p class="card-text text-secondary">ប្រភព : SBM News</p>
-              <p class="card-text">
-                <span class="text-warning">9.4
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-fill"></i>
-                  <i class="bi bi-star-half"></i>
-                  <i class="bi bi-star"></i></span>
-
-                (178 votes) | Your rating: 0
-              </p>
+                  (178 votes) | Your rating: 0
+                </p>
+              </div>
+            </div>
+            <div class="comment-section">
+              <h6>Comments</h6>
+              <div class="mb-3">
+                <textarea
+                  class="form-control"
+                  placeholder="Add a comment..."
+                  rows="1"
+                ></textarea>
+              </div>
+              <div class="comment-list">
+                <div class="user mt-2">
+                  <div class="user-pf">
+                    <img
+                      src="assets/minea/img/Elon_Musk_Royal_Society.webp"
+                      alt=""
+                    />
+                  </div>
+                  <div class="user-name">
+                    <div class="name-title">Elon musk</div>
+                    <p>
+                      ការងារថ្មី មានសារសំខាន់ល្អណាស់ តែម៉ូតផលិតផល នៅមានកម្រិត
+                      មិនមានភាពទាក់ទាញ។
+                    </p>
+                  </div>
+                </div>
+                <div class="user mt-2">
+                  <div class="user-pf">
+                    <img
+                      src="assets/minea/img/Elon_Musk_Royal_Society.webp"
+                      alt=""
+                    />
+                  </div>
+                  <div class="user-name">
+                    <div class="name-title">Elon musk</div>
+                    <p>
+                      ការងារថ្មី មានសារសំខាន់ល្អណាស់ តែម៉ូតផលិតផល នៅមានកម្រិត
+                      មិនមានភាពទាក់ទាញ។
+                    </p>
+                  </div>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="comment-section">
-            <h6>Comments</h6>
-            <div class="mb-3">
-              <textarea class="form-control" placeholder="Add a comment..." rows="1"></textarea>
-            </div>
-            <div class="comment-list">
-              <div class="user mt-2">
-                <div class="user-pf">
-                  <img src="assets/minea/img/Elon_Musk_Royal_Society.webp" alt="" />
-                </div>
-                <div class="user-name">
-                  <div class="name-title">Elon musk</div>
-                  <p>
-                    ការងារថ្មី មានសារសំខាន់ល្អណាស់ តែម៉ូតផលិតផល នៅមានកម្រិត
-                    មិនមានភាពទាក់ទាញ។
+          <div class="col-md-6 col-lg-4">
+            <a href="video1.html" class="text-decoration-none text-dark">
+              <div class="card" style="height: 170px; cursor: pointer">
+                <div class="card-body d-flex">
+                  <div class="card-img">
+                    <img
+                      src="assets/minea/img/v_img01.png"
+                      alt=""
+                      class="rounded-2"
+                      style="width: 200px; height: 130px"
+                    />
+                  </div>
+                  <p class="card-text ms-3">
+                    សិប្បកម្មកែច្នៃកាកសំណល់ផ្លាស្ទីកទៅជាឥដ្ឋអេកូមួយកន្លែងនៅក្រុងតាខ្មៅកំពុងទទួលបានការគាំទ្រខ្លាំងពីអតិថិជន
                   </p>
                 </div>
               </div>
-              <div class="user mt-2">
-                <div class="user-pf">
-                  <img src="assets/minea/img/Elon_Musk_Royal_Society.webp" alt="" />
-                </div>
-                <div class="user-name">
-                  <div class="name-title">Elon musk</div>
-                  <p>
-                    ការងារថ្មី មានសារសំខាន់ល្អណាស់ តែម៉ូតផលិតផល នៅមានកម្រិត
-                    មិនមានភាពទាក់ទាញ។
+            </a>
+
+            <a href="video1.html" class="text-decoration-none text-dark">
+              <div class="card mt-3" style="height: 170px; cursor: pointer">
+                <div class="card-body d-flex">
+                  <div class="card-img">
+                    <img
+                      src="assets/minea/img/v_img02.png"
+                      alt=""
+                      class="rounded-2"
+                      style="width: 200px; height: 130px"
+                    />
+                  </div>
+                  <p class="card-text ms-3">
+                    វីធីធ្វើធុងសំរាមកែច្នៃពីដបទឹកសុទ្ថ
                   </p>
                 </div>
               </div>
-            </div>
+            </a>
+
+            <a href="video1.html" class="text-decoration-none text-dark">
+              <div class="card mt-3" style="height: 170px; cursor: pointer">
+                <div class="card-body d-flex">
+                  <div class="card-img">
+                    <img
+                      src="assets/minea/img/v_img03.png"
+                      alt=""
+                      class="rounded-2"
+                      style="width: 200px; height: 130px"
+                    />
+                  </div>
+                  <p class="card-text ms-3">
+                    តើ​ការ​កែច្នៃ​កែច្នៃ​មាន​ប្រយោជន៍​អ្វី​ខ្លះ​ក្នុង​ជីវិត​ប្រចាំ​ថ្ងៃ​របស់​យើង?
+                  </p>
+                </div>
+              </div>
+            </a>
+
+            <a href="video1.html" class="text-decoration-none text-dark">
+              <div class="card mt-3" style="height: 170px; cursor: pointer">
+                <div class="card-body d-flex">
+                  <div class="card-img">
+                    <img
+                      src="assets/minea/img/v_img04.png"
+                      alt=""
+                      class="rounded-2"
+                      style="width: 200px; height: 130px"
+                    />
+                  </div>
+                  <p class="card-text ms-3">
+                    ការយល់ដឹងអំពីឧស្សាហកម្មកែច្នៃផ្លាសិ្ចច
+                  </p>
+                </div>
+              </div>
+            </a>
           </div>
         </div>
-        <div class="col-md-6 col-lg-4">
-
-          <a href="video1.html" class="text-decoration-none text-dark">
-            <div class="card" style="height: 170px; cursor: pointer;">
-              <div class="card-body d-flex">
-                <div class="card-img">
-                  <img src="assets/minea/img/v_img01.png" alt="" class="rounded-2" style="width: 200px; height: 130px" />
-                </div>
-                <p class="card-text ms-3">
-                  សិប្បកម្មកែច្នៃកាកសំណល់ផ្លាស្ទីកទៅជាឥដ្ឋអេកូមួយកន្លែងនៅក្រុងតាខ្មៅកំពុងទទួលបានការគាំទ្រខ្លាំងពីអតិថិជន
-                </p>
-              </div>
-            </div>
-          </a>
-
-          <a href="video1.html" class="text-decoration-none text-dark">
-            <div class="card mt-3" style="height: 170px; cursor: pointer;">
-              <div class="card-body d-flex">
-                <div class="card-img">
-                  <img src="assets/minea/img/v_img02.png" alt="" class="rounded-2" style="width: 200px; height: 130px" />
-                </div>
-                <p class="card-text ms-3">
-                  វីធីធ្វើធុងសំរាមកែច្នៃពីដបទឹកសុទ្ថ
-                </p>
-              </div>
-            </div>
-          </a>
-
-          <a href="video1.html" class="text-decoration-none text-dark">
-            <div class="card mt-3" style="height: 170px; cursor: pointer;">
-              <div class="card-body d-flex">
-                <div class="card-img">
-                  <img src="assets/minea/img/v_img03.png" alt="" class="rounded-2" style="width: 200px; height: 130px" />
-                </div>
-                <p class="card-text ms-3">
-                  តើ​ការ​កែច្នៃ​កែច្នៃ​មាន​ប្រយោជន៍​អ្វី​ខ្លះ​ក្នុង​ជីវិត​ប្រចាំ​ថ្ងៃ​របស់​យើង?
-                </p>
-              </div>
-            </div>
-          </a>
-
-          <a href="video1.html" class="text-decoration-none text-dark">
-            <div class="card mt-3" style="height: 170px; cursor: pointer;">
-              <div class="card-body d-flex">
-                <div class="card-img">
-                  <img src="assets/minea/img/v_img04.png" alt="" class="rounded-2" style="width: 200px; height: 130px" />
-                </div>
-                <p class="card-text ms-3">
-                  ការយល់ដឹងអំពីឧស្សាហកម្មកែច្នៃផ្លាសិ្ចច
-                </p>
-              </div>
-            </div>
-          </a>
-
-        </div>
-
       </div>
-    </div>
-  </main>
-</body>
-<script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
-<script src="assets/minea/css/minea.js"></script>
-<!-- vdo js -->
-<script src="path/to/plyr.js"></script>
-<script>
-  const player = new Plyr("#player");
-</script>
-
+    </main>
+  </body>
+  <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/minea/css/minea.js"></script>
+  <!-- vdo js -->
+  <script src="path/to/plyr.js"></script>
+  <script>
+    const player = new Plyr("#player");
+  </script>
 </html>
