--- a/cart.html
+++ b/cart.html
@@ -214,5 +214,6 @@
 
     <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
     <script src="assets/makara/index.js"></script>
+    <script src="assets/js/function.js"></script>
   </body>
 </html>
