--- a/donation.html
+++ b/donation.html
@@ -94,7 +94,7 @@
                     អត្ថបទ
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">ឯកសារ</a></li>
+                    <li><a class="dropdown-item" href="frist_doc.html">ឯកសារ</a></li>
                     <li>
                       <a class="dropdown-item" href="minea.html">វីដេអូ</a>
                     </li>
@@ -103,7 +103,7 @@
                 <li class="nav-item dropdown fs-5">
                   <a
                     class="nav-link active dropdown-toggle nav-hover no-caret"
-                    href="donation.html"
+                    href="#"
                     role="button"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
@@ -570,59 +570,63 @@
 
           <!-- Contact Info -->
           <div class="col-6 col-md-3 col-lg-4">
-            <h5 class="mb-3 fw-bold text-success mt-3 fs-footer">
-              ព័ត៌មានទំនាក់ទំនង
-            </h5>
-            <p class="mb-1">
-              <i class="bi bi-telephone me-2"></i>+855 12 123 456
-            </p>
-            <p class="mb-1">
-              <i class="bi bi-envelope me-2"></i>
-              <a href="mailto:info@gmail.com" class="text-dark"
-                >info@gmail.com</a
-              >
-            </p>
-            <!-- Social Media -->
-            <div class="d-flex gap-3 mt-3">
-              <a href="#" class="text-success"
-                ><i class="bi bi-facebook fs-4"></i
-              ></a>
-              <a href="#" class="text-success"
-                ><i class="bi bi-twitter-x fs-4"></i
-              ></a>
-              <a href="#" class="text-success"
-                ><i class="bi bi-telegram fs-4"></i
-              ></a>
-              <a href="#" class="text-success"
-                ><i class="bi bi-instagram fs-4"></i
-              ></a>
+            <div class="row ms-sm-0 ms-lg-20 g-0">
+              <h5 class="mb-3 fw-bold text-success mt-3 fs-footer">
+                ព័ត៌មានទំនាក់ទំនង
+              </h5>
+              <p class="mb-1">
+                <i class="bi bi-telephone me-2"></i>+855 12 123 456
+              </p>
+              <p class="mb-1">
+                <i class="bi bi-envelope me-2"></i>
+                <a href="mailto:info@gmail.com" class="text-dark"
+                  >info@gmail.com</a
+                >
+              </p>
+              <!-- Social Media -->
+              <div class="d-flex gap-3 mt-3">
+                <a href="#" class="text-success"
+                  ><i class="bi bi-facebook fs-4"></i
+                ></a>
+                <a href="#" class="text-success"
+                  ><i class="bi bi-twitter-x fs-4"></i
+                ></a>
+                <a href="#" class="text-success"
+                  ><i class="bi bi-telegram fs-4"></i
+                ></a>
+                <a href="#" class="text-success"
+                  ><i class="bi bi-instagram fs-4"></i
+                ></a>
+              </div>
             </div>
           </div>
 
           <!-- Quick Links -->
           <div class="col-6 col-md-3 col-lg-4">
-            <h5 class="mb-3 fw-bold text-success mt-3 fs-footer">
-              តំណភ្ជាប់រហ័ស
-            </h5>
-            <div class="row">
-              <div class="col-6">
-                <ul class="list-unstyled">
-                  <li>
-                    <a href="donation.html" class="footer-link d-block fs-5"
-                      >បរិច្ចាក</a
-                    >
-                  </li>
-                  <li>
-                    <a href="event.html" class="footer-link d-block fs-5"
-                      >ព្រឹត្តិការណ៍</a
-                    >
-                  </li>
-                  <li>
-                    <a href="about.html" class="footer-link d-block fs-5"
-                      >អំពីយើង</a
-                    >
-                  </li>
-                </ul>
+            <div class="row ms-sm-0 ms-lg-15 g-0 p-0">
+              <h5 class="mb-3 fw-bold text-success mt-3 fs-footer">
+                តំណភ្ជាប់រហ័ស
+              </h5>
+              <div class="row">
+                <div class="col-6 p-0">
+                  <ul class="list-unstyled">
+                    <li>
+                      <a href="donation.html" class="footer-link d-block fs-5"
+                        >បរិច្ចាក</a
+                      >
+                    </li>
+                    <li>
+                      <a href="event.html" class="footer-link d-block fs-5"
+                        >ព្រឹត្តិការណ៍</a
+                      >
+                    </li>
+                    <li>
+                      <a href="about.html" class="footer-link d-block fs-5"
+                        >អំពីយើង</a
+                      >
+                    </li>
+                  </ul>
+                </div>
               </div>
             </div>
           </div>
