--- a/event2.html
+++ b/event2.html
@@ -103,7 +103,7 @@
                     អត្ថបទ
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">ឯកសារ</a></li>
+                    <li><a class="dropdown-item" href="frist_doc.html">ឯកសារ</a></li>
                     <li>
                       <a class="dropdown-item" href="minea.html">វីដេអូ</a>
                     </li>
@@ -547,6 +547,7 @@
     </main>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
+    <script src="assets/js/function.js"></script>
     <script>
       const swiper = new Swiper(".swiper", {
         slidesPerView: 1,
