--- a/event8.html
+++ b/event8.html
@@ -103,7 +103,7 @@
                     អត្ថបទ
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">ឯកសារ</a></li>
+                    <li><a class="dropdown-item" href="frist_doc.html">ឯកសារ</a></li>
                     <li>
                       <a class="dropdown-item" href="minea.html">វីដេអូ</a>
                     </li>
