--- a/about.html
+++ b/about.html
@@ -94,7 +94,7 @@
                     អត្ថបទ
                   </a>
                   <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="#">ឯកសារ</a></li>
+                    <li><a class="dropdown-item" href="frist_doc.html">ឯកសារ</a></li>
                     <li>
                       <a class="dropdown-item" href="minea.html">វីដេអូ</a>
                     </li>
@@ -126,8 +126,8 @@
                     >ផលិតផលកែច្នៃ</a
                   >
                 </li>
-                <li class="nav-item active fs-5">
-                  <a class="nav-link nav-hover" href="about.html">អំពីយើង</a>
+                <li class="nav-item fs-5">
+                  <a class="nav-link active nav-hover" href="about.html">អំពីយើង</a>
                 </li>
               </ul>
             </div>
@@ -136,7 +136,7 @@
           <!-- Right Side (Search + Notification + Profile + Toggle) -->
           <div class="d-flex align-items-center">
             <!-- Search (Desktop Only) -->
-            <form class="d-flex d-none d-md-block me-3" role="search">
+            <form class="d-flex d-none d-md-block me-3 search-2" role="search">
               <input
                 class="form-control mx-2"
                 type="search"
@@ -725,7 +725,7 @@
 
           <!-- Contact Info -->
           <div class="col-6 col-md-3 col-lg-4">
-            <div class="row ms-sm-0 ms-lg-20 g-0">
+            <div class="row ms-lg-20">
               <h5 class="mb-3 fw-bold text-success mt-3 fs-footer">
                 ព័ត៌មានទំនាក់ទំនង
               </h5>
@@ -758,12 +758,12 @@
 
           <!-- Quick Links -->
           <div class="col-6 col-md-3 col-lg-4">
-            <div class="row ms-sm-0 ms-lg-15 g-0 p-0">
+            <div class="row ms-lg-15">
               <h5 class="mb-3 fw-bold text-success mt-3 fs-footer">
                 តំណភ្ជាប់រហ័ស
               </h5>
               <div class="row">
-                <div class="col-6 p-0">
+                <div class="col-6">
                   <ul class="list-unstyled">
                     <li>
                       <a href="donation.html" class="footer-link d-block fs-5"
