--- a/donation.html
+++ b/donation.html
@@ -570,7 +570,7 @@
 
           <!-- Contact Info -->
           <div class="col-6 col-md-3 col-lg-4">
-            <div class="row ms-sm-0 ms-lg-20 g-0">
+            <div class="row ms-lg-20 g-0">
               <h5 class="mb-3 fw-bold text-success mt-3 fs-footer">
                 ព័ត៌មានទំនាក់ទំនង
               </h5>
@@ -603,7 +603,7 @@
 
           <!-- Quick Links -->
           <div class="col-6 col-md-3 col-lg-4">
-            <div class="row ms-sm-0 ms-lg-15 g-0 p-0">
+            <div class="row ms-lg-15 g-0 p-0">
               <h5 class="mb-3 fw-bold text-success mt-3 fs-footer">
                 តំណភ្ជាប់រហ័ស
               </h5>
