--- a/event.html
+++ b/event.html
@@ -109,7 +109,7 @@
                 <li class="nav-item dropdown fs-5">
                   <a
                     class="nav-link active dropdown-toggle nav-hover no-caret"
-                    href="donation.html"
+                    href="#"
                     role="button"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
