--- a/eventposting.html
+++ b/eventposting.html
@@ -422,7 +422,7 @@
 
                     <!-- Buttons -->
                     <div class="d-flex justify-content-between">
-                      <a class="btn btn-secondary" href="used.html#user-posts">
+                      <a class="btn btn-secondary" href="event.html">
                         <i class="fa-solid fa-arrow-left"></i> ត្រឡប់
                       </a>
                       <button
