--- a/video1.html
+++ b/video1.html
@@ -387,8 +387,8 @@
                       style="width: 200px; height: 130px"
                     />
                   </div>
-                  <p class="card-text ms-3">
-                    សិប្បកម្មកែច្នៃកាកសំណល់ផ្លាស្ទីកទៅជាឥដ្ឋអេកូមួយកន្លែងនៅក្រុងតាខ្មៅកំពុងទទួលបានការគាំទ្រខ្លាំងពីអតិថិជន
+                  <p class="card-text ms-3 ">
+                    សិប្បកម្មកែច្នៃកាកសំណល់ផ្លាស្ទីកទៅជា...
                   </p>
                 </div>
               </div>
