--- a/frist_doc.html
+++ b/frist_doc.html
@@ -7,7 +7,6 @@
     <link rel="stylesheet" href="assets/bootstrap/dist/css/bootstrap.css" />
     <link rel="stylesheet" href="assets/css/style.css" />
     <link rel="stylesheet" href="assets/css/theme.css" />
-    <link rel="stylesheet" href="assets/chhorng/style.css" />
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css"
@@ -42,15 +41,13 @@
             aria-labelledby="offcanvasNavbarLabel"
           >
             <div class="offcanvas-header bg-nav">
-              <h5 class="offcanvas-title" id="offcanvasNavbarLabel">
-                <a class="navbar-brand d-block" href="index.html">
-                  <img
-                    src="assets/image/green_leaves_round_logo.png"
-                    style="width: 60px"
-                    alt="logo"
-                  />
-                </a>
-              </h5>
+              <a class="navbar-brand d-block" href="index.html">
+                <img
+                  src="assets/image/green_leaves_round_logo.png"
+                  class="logo"
+                  alt="logo"
+                />
+              </a>
               <button
                 type="button"
                 class="btn-close"
@@ -63,16 +60,19 @@
               <ul
                 class="navbar-nav justify-content-center flex-grow-1 pe-3 mt-2"
               >
-                <!-- Search (Mobile Only) -->
+                <!-- Mobile Search -->
                 <form
                   class="d-flex mb-3 d-block d-md-none search-1"
                   role="search"
                 >
+                  <label for="mobile-search" class="visually-hidden"
+                    >Search</label
+                  >
                   <input
+                    id="mobile-search"
                     class="form-control"
                     type="search"
                     placeholder="Search"
-                    aria-label="Search"
                   />
                 </form>
 
@@ -84,11 +84,12 @@
                 </li>
                 <li class="nav-item dropdown fs-5">
                   <a
-                    class="nav-link dropdown-toggle nav-hover no-caret"
+                    class="nav-link active dropdown-toggle nav-hover no-caret"
                     href="#"
                     role="button"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
+                    aria-haspopup="true"
                   >
                     អត្ថបទ
                   </a>
@@ -101,14 +102,14 @@
                     </li>
                   </ul>
                 </li>
-
                 <li class="nav-item dropdown fs-5">
                   <a
                     class="nav-link dropdown-toggle nav-hover no-caret"
-                    href="donation.html"
+                    href="#"
                     role="button"
                     data-bs-toggle="dropdown"
                     aria-expanded="false"
+                    aria-haspopup="true"
                   >
                     សកម្មភាពសង្គម
                   </a>
@@ -135,19 +136,20 @@
             </div>
           </div>
 
-          <!-- Right Side (Search + Notification + Profile + Toggle) -->
+          <!-- Right Side -->
           <div class="d-flex align-items-center">
-            <!-- Search (Desktop Only) -->
+            <!-- Desktop Search -->
             <form class="d-flex d-none d-md-block me-3 search-2" role="search">
+              <label for="desktop-search" class="visually-hidden">Search</label>
               <input
+                id="desktop-search"
                 class="form-control mx-2"
                 type="search"
                 placeholder="Search"
-                aria-label="Search"
               />
             </form>
 
-            <!-- Notification -->
+            <!-- Notification Dropdown -->
             <div class="dropdown me-2">
               <button
                 class="btn dropdown-toggle no-caret position-relative"
@@ -162,72 +164,15 @@
                   >4</span
                 >
               </button>
-
               <ul
                 class="dropdown-menu dropdown-menu-center dropdown-menu-end p-0 shadow"
                 style="width: 320px; max-height: 350px; overflow-y: auto"
               >
-                <!-- Header -->
-                <div
-                  class="d-flex align-items-center justify-content-between border-bottom px-2 py-2 bg-light"
+                <li
+                  class="dropdown-header d-flex justify-content-between align-items-center px-2 py-2 bg-light"
                 >
-                  <h6 class="mb-0">Notifications</h6>
+                  <span>Notifications</span>
                   <i class="bi bi-three-dots"></i>
-                </div>
-
-                <!-- Notifications -->
-                <li class="noti-item">
-                  <a class="dropdown-item" href="#">
-                    <div class="py-2 d-flex align-items-center">
-                      <img
-                        src="assets/image/avatar-4.jpg"
-                        class="rounded-circle"
-                        style="width: 40px; height: 40px"
-                      />
-                      <div class="content ms-3" style="max-width: 220px">
-                        <p class="fw-bolder mb-1">Pozz Mao</p>
-                        <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
-                          Lorem ipsum dolor sit amet consectetur.
-                        </p>
-                      </div>
-                    </div>
-                  </a>
-                </li>
-
-                <!-- Collapse Extra Notifications -->
-                <div class="collapse" id="extraNoti">
-                  <li class="noti-item">
-                    <a class="dropdown-item" href="frist_doc.html">
-                      <div class="py-2 d-flex align-items-center">
-                        <img
-                          src="assets/image/avatar-4.jpg"
-                          class="rounded-circle"
-                          style="width: 40px; height: 40px"
-                        />
-                        <div class="content ms-3" style="max-width: 220px">
-                          <p class="fw-bolder mb-1">John Doe</p>
-                          <p class="fs-6 text-start limit-line-2 mb-0 lh-sm">
-                            More hidden notifications appear here.
-                          </p>
-                        </div>
-                      </div>
-                    </a>
-                  </li>
-                </div>
-
-                <!-- See More -->
-                <li class="text-center border-top">
-                  <a
-                    class="btn btn-link w-100 py-2 d-block text-decoration-none fw-semibold text-success"
-                    data-bs-toggle="collapse"
-                    href="#extraNoti"
-                    role="button"
-                    aria-expanded="false"
-                    aria-controls="extraNoti"
-                    style="font-size: 14px"
-                  >
-                    See more
-                  </a>
                 </li>
               </ul>
             </div>
@@ -285,7 +230,6 @@
               data-bs-toggle="offcanvas"
               data-bs-target="#offcanvasNavbar"
               aria-controls="offcanvasNavbar"
-              aria-label="Toggle navigation"
             >
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -293,8 +237,12 @@
         </div>
       </nav>
     </header>
+
+    <!-- Bootstrap JS -->
+    <script src="assets/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+
     <main>
-      <section class="py-5 mt-8">
+      <section class="pb-5 mt-11">
         <div class="container bg-light bg-opacity-75 p-4 rounded-3 shadow-sm">
           <div class="row gy-4">
             <!-- Card -->
