--- a/frist_doc.html
+++ b/frist_doc.html
@@ -312,15 +312,14 @@
                   class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
                 >
                   <img
-                    src="assets/minea/img/image02.png"
+                    src="assets/minea/img/feature.png"
                     alt="ការកែច្នៃផ្លាស្ទិក"
                     class="card-img-top rounded-top-3"
                     style="height: 300px"
                   />
                   <div class="card-body">
                     <p class="card-text">
-                      សំរាមប្លាស្ទិក
-                      ត្រូវបានកែច្នៃប្រើជាវត្ថុធាតុផ្សំយ៉ាងសំខាន់ក្នុងការផលិតឥដ្ឋបរិស្ថាន
+                    ការកែច្នៃស្រទបស្លា ជាឧបករណ៍ប្រើប្រាស់ផ្សេងៗ ចូលរួមចំណែកយ៉ាងសំខាន់
                     </p>
                   </div>
                 </div>
@@ -335,15 +334,14 @@
                   class="card h-100 border-0 shadow-sm hover-shadow transition rounded-3"
                 >
                   <img
-                    src="assets/minea/img/image04.png"
+                    src="assets/minea/img/bb_02.png"
                     alt="ការកែច្នៃផ្លាស្ទិក"
                     class="card-img-top rounded-top-3"
                     style="height: 300px"
                   />
                   <div class="card-body">
                     <p class="card-text">
-                      ពីសំរាមប្លាស្ទិក កែច្នៃក្លាយទៅជាសិល្បៈគំនូរ
-                      និងរូបចម្លាក់ដ៏គួរឱ្យកោតសរសើរ
+                      ជំនាញកែច្នៃបន្លែ និង​ផ្លែឈើ ជំនាញថ្មី​ជួយ​កសិករកែច្នៃផលិតផលកសិកម្ម
                     </p>
                   </div>
                 </div>
