--- a/minea.html
+++ b/minea.html
@@ -295,14 +295,14 @@
                 <div class="card h-100">
                   <div class="card-img p-2">
                     <img
-                      src="assets/minea/img/img01.png"
+                      src="assets/minea/img/coffee-img.png"
                       alt=""
                       class="rounded-3"
                     />
                   </div>
                   <p class="card-text m-3">
-                    ធ្លាប់ឆ្ងល់ទេ! តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
-                    ខាងក្រោយនេះគឺជាដំណើរការកែច្នៃដែលគួរយល់ដឹង
+                    ប្រយោជន៍នៃកាកកាហ្វេចំពោះដំណាំដែលអ្នកមិននឹកស្មានដល់
+
                   </p>
                 </div>
               </a>
@@ -312,14 +312,61 @@
                 <div class="card h-100">
                   <div class="card-img p-2">
                     <img
-                      src="assets/minea/img/img02.png"
+                      src="assets/minea/img/plastic.png"
                       alt=""
                       class="rounded-3"
                     />
                   </div>
                   <p class="card-text m-3">
-                    ធ្លាប់ឆ្ងល់ទេ! តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
-                    ខាងក្រោយនេះគឺជាដំណើរការកែច្នៃដែលគួរយល់ដឹង
+                   ការកែច្នៃសំរាមប្លាស្ទិកក្លាយជាគ្រឿងសំណង់និងគ្រឿងសង្ហារឹម
+                  </p>
+                </div>
+              </a>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <a href="video1.html" class="text-decoration-none text-dark">
+                <div class="card h-100">
+                  <div class="card-img p-2">
+                    <img
+                      src="assets/minea/img/ompov.png"
+                      alt=""
+                      class="rounded-3"
+                    />
+                  </div>
+                  <p class="card-text m-3">
+                   ពីសំណល់កាកអំពៅ ក្លាយទៅជាចានបរិស្ថានគ្មានជាតិគីមី និងងាយស្រួលប្រើប្រាស់
+                  </p>
+                </div>
+              </a>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <a href="video1.html" class="text-decoration-none text-dark">
+                <div class="card h-100">
+                  <div class="card-img p-2">
+                    <img
+                      src="assets/minea/img/Kitchenwaste.png"
+                      alt=""
+                      class="rounded-3"
+                    />
+                  </div>
+                  <p class="card-text m-3">
+                  កាកសំណល់ផ្ទះបាយ ក្លាយជាជីដ៏មានតម្លៃចំពោះដំណាំ
+                  </p>
+                </div>
+              </a>
+            </div>
+            <div class="col-md-6 col-lg-4">
+              <a href="video1.html" class="text-decoration-none text-dark">
+                <div class="card h-100">
+                  <div class="card-img p-2">
+                    <img
+                      src="assets/minea/img/sombokong.png"
+                      alt=""
+                      class="rounded-3"
+                    />
+                  </div>
+                  <p class="card-text m-3">
+                    ធុងសំរាមដែលច្នៃពីសំបកកង់ឡាន
                   </p>
                 </div>
               </a>
@@ -335,59 +382,7 @@
                     />
                   </div>
                   <p class="card-text m-3">
-                    ធ្លាប់ឆ្ងល់ទេ! តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
-                    ខាងក្រោយនេះគឺជាដំណើរការកែច្នៃដែលគួរយល់ដឹង
-                  </p>
-                </div>
-              </a>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <a href="video1.html" class="text-decoration-none text-dark">
-                <div class="card h-100">
-                  <div class="card-img p-2">
-                    <img
-                      src="assets/minea/img/img01.png"
-                      alt=""
-                      class="rounded-3"
-                    />
-                  </div>
-                  <p class="card-text m-3">
-                    ធ្លាប់ឆ្ងល់ទេ! តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
-                    ខាងក្រោយនេះគឺជាដំណើរការកែច្នៃដែលគួរយល់ដឹង
-                  </p>
-                </div>
-              </a>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <a href="video1.html" class="text-decoration-none text-dark">
-                <div class="card h-100">
-                  <div class="card-img p-2">
-                    <img
-                      src="assets/minea/img/img02.png"
-                      alt=""
-                      class="rounded-3"
-                    />
-                  </div>
-                  <p class="card-text m-3">
-                    ធ្លាប់ឆ្ងល់ទេ! តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
-                    ខាងក្រោយនេះគឺជាដំណើរការកែច្នៃដែលគួរយល់ដឹង
-                  </p>
-                </div>
-              </a>
-            </div>
-            <div class="col-md-6 col-lg-4">
-              <a href="video1.html" class="text-decoration-none text-dark">
-                <div class="card h-100">
-                  <div class="card-img p-2">
-                    <img
-                      src="assets/minea/img/img03.png"
-                      alt=""
-                      class="rounded-3"
-                    />
-                  </div>
-                  <p class="card-text m-3">
-                    ធ្លាប់ឆ្ងល់ទេ! តើគេកែច្នៃផ្លាស្ទិកយ៉ាងដូចម្ដេច?
-                    ខាងក្រោយនេះគឺជាដំណើរការកែច្នៃដែលគួរយល់ដឹង
+                    ផលិតផលច្នៃប្រឌិតផលិតពីផ្លាស្ទិចកែច្នៃ
                   </p>
                 </div>
               </a>
